--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -12,7 +12,7 @@
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <% day[:month] %>/<% day[:date] %>
+          <%= day[:month] %>/<%= day[:date] %>
         </div>
         <ul class='content'>
         <% if day[:plans].length != 0 %>
@@ -23,5 +23,4 @@
         </ul>
       </div>
     <% end %>
-  </div>
 </div>
